rename project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-vue-proj",
+  "name": "generator-vue-zl",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
